feat: VSDSPUB-383: * Code smells